--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Society</title>
+    <title>Dead Poet Society</title>
     <style>
         * {
             margin: 0;
@@ -12,7 +12,6 @@
         }
         body {
             font-family: 'Garamond', serif;
-            background: url('path-to-background-image.jpg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -89,7 +88,7 @@
         <p>
             Click below to enter the world of poetry, sweetness, and love.
         </p>
-        <a href="https://www.your-main-site.com">Enter the Society</a>
+        <a href="#">Enter the Society</a>
     </div>
 </body>
 </html>
