--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             align-items: center;
             color: #f5f5f5; 
             text-align: center;
-            background: url('image/dps.webp') no-repeat center center/cover;
+            background: url('dps.webp') no-repeat center center/cover;
             background-color: #121212;
         }
         
