--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         .fade-in {
             animation: fadeIn 2s ease-in-out;
         }
+
+        .invitation:hover {
+            box-shadow: 0 0 20px 5px #ffcc00;
         
         @keyframes fadeIn {
             from {
