--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             text-align: center;
             background: url('dps.webp') no-repeat center center/cover;
             background-color: #121212;
+            user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
         }
         
         .invitation {
@@ -80,8 +83,27 @@
         }
 
     </style>
+    <script>
+        document.onkeydown = (e) => {
+    if (e.key == 123) {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'I') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'C') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'J') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.key == 'U') {
+        e.preventDefault();
+    }
+};
+    </script>
 </head>
-<body>
+<body oncontextmenu="return false">
     <div class="invitation fade-in">
         <h1>O captain, my captian</h1>
         <p>
