--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     if (e.ctrlKey && e.key == 'U') {
         e.preventDefault();
     }
+    if (e.ctrlKey && e.key == 'S') {
+        e.preventDefault();
+    }
 };
     </script>
 </head>
