--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p>
             Click below to enter the world of poetry, sweetness, and love.
         </p>
-        <a href="#">Enter the Society</a>
+        <a href="https://deadpoetsociety.ct.ws/">Enter the Society</a>
     </div>
 </body>
 </html>
